# Graphics-Modeler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hw09.txt  resources.qrc  user-stories.txt
GraphicsModelerUI/: CMakeLists.txt  GraphicsModelerUI.qmlproject  GraphicsModelerUI.qmlproject.qtds  GraphicsModelerUI.qmlproject.qtds.4ef2a3e  GraphicsModelerUI.qmlproject.qtds.698863b  GraphicsModelerUI.qrc  qmlmodules  qtquickcontrols2.conf
GraphicsModelerUI/content/: App.qml  ContactPopup.ui.qml  Login01.ui.qml  LoginUI.ui.qml  LoginUIContactPop.ui.qml  MainUI.ui.qml  MainWindow.ui.qml  MeetTheTeamPopup.ui.qml  Screen01.ui.qml
GraphicsModelerUI/imports/: CMakeLists.txt
GraphicsModelerUI/imports/GraphicsModelerUI/: CMakeLists.txt  Constants.qml  EventListModel.qml  qmldir
GraphicsModelerUI/imports/GraphicsModelerUI/designer/: plugin.metainfo
GraphicsModelerUI/src/: import_qml_plugins.h
db/: demo.db  demo2.db  shapes.db
include/: shapes.h
src/core/: main.cpp  main.h
src/db/: shapes.db  users.db
src/gm/: gm.h  selection-sort.h  vector.h
src/models/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  ellipse_shape.cpp  ellipse_shape.h  line.cpp  line.h  line_shape.cpp  line_shape.h  polygon.cpp  polygon.h  polygon_shape.cpp  polygon_shape.h  polyline.cpp  polyline.h  polyline_shape.cpp  polyline_shape.h  rectangle.cpp  rectangle.h  rectangle_shape.cpp  rectangle_shape.h  shape.cpp  shape.h  square.h  text.cpp  text.h  text_shape.cpp  text_shape.h
src/models/free-form/: circle.cpp  circle.h  ellipse.cpp  ellipse.h
src/models/polygon/: polygon.cpp  polygon.h  polyline.cpp  polyline.h
src/models/quadrilateral/: rectangle.cpp  rectangle.h  square.cpp  square.h
src/qt/: App.qml  ContactPopup.ui.qml  LoginUI.ui.qml  MainUI.ui.qml  Window.qml  cpp-interface.h  login-widget.cpp  login-widget.h  main-widget.h  main-window.cpp  main-window.h  painted-item.h  qtCallTest.h
src/qt/components/: ContactPopup.ui.qml  GMComboBox.ui.qml  GMMenuBar.ui.qml  ImageShadow.ui.qml  LoadingScreen.ui.qml  MeetTheTeamPopup.ui.qml  ShapePropertiesPane.ui.qml  ShapeSelector.ui.qml
src/qt/singleton/: cpp-interface.h
src/qt/user-interface/: ContactPopup.ui.qml  LoginUI.ui.qml  MainUI.ui.qml
src/qt/widgets/: App.qml  Login01.ui.qml  LoginUI.ui.qml  LoginWindow.qml  Screen01.ui.qml  login-widget.cpp  login-widget.h  login-window.qml  login.cpp  login.h  main-widget.cpp  main.cpp
src/stl/: vector.cpp  vector.h
src/tests/: person.cpp  person.h
src/tests/selection-sort/: selection-sort.h  sort-test.cpp  sort-test.h
src/utility/: utility.cpp  utility.h  window.h
